# wtweg

./: FAQ.md  LICENSE  Makefile  README.md  SDLggerat.code-workspace  cli_build.sh  cores.txt  meson.build  src_batch.py  wtfweg.code-workspace  wtweg.code-workspace
.github/workflows/: main.yml
compile_dir/: mudmaps.txt
src/: main.cpp
src/main/: clibretro.cpp  clibretro.h  clibretro_implcallbacks.cpp  inout.h  input.cpp  io.cpp  io.h  main.cpp  menus.cpp  out_aud.cpp  out_aud.h  out_video.cpp  out_video.h  sdlggerat.h  utils.cpp  utils.h
src/main/mudutils/: compress.cpp  crypto.cpp  misc.cpp  utils.h
